adding more test cases to user creation

--- a/source/java/admin-webapp/src/scripts/directives/angular-fui/fui-dropdown/_fui-dropdown.scss
+++ b/source/java/admin-webapp/src/scripts/directives/angular-fui/fui-dropdown/_fui-dropdown.scss
@@ -23,6 +23,10 @@
 .dropdown {
     display: inline-block;
 
+    .caret {
+        margin-top: 8px;
+    }
+
     .skinny {
         .caret {
             margin-top: 6px;
