--- a/source/java/admin-webapp/src/styles/flat-ui.css
+++ b/source/java/admin-webapp/src/styles/flat-ui.css
@@ -5769,7 +5769,7 @@ fieldset[disabled] .twitter-typeahead .tt-hint {
   padding: 38px 38px 267px;
   margin-bottom: 77px;
   color: #fff;
-  background: url(../img/login/imac.png) 0 0 no-repeat;
+/*  background: url(../img/login/imac.png) 0 0 no-repeat;*/
   background-size: 940px 778px;
   }
 .login-screen {
@@ -5839,7 +5839,7 @@ fieldset[disabled] .twitter-typeahead .tt-hint {
   }
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (-moz-min-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 3/2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (-moz-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 2) {
   .login {
-    background-image: url(../img/login/imac-2x.png);
+/*    background-image: url(../img/login/imac-2x.png);*/
     }
   }
 footer {
