--- a/source/java/admin-webapp/src/styles/sass/main.scss
+++ b/source/java/admin-webapp/src/styles/sass/main.scss
@@ -36,6 +36,8 @@
 @import 'status/index';
 @import 'account/index';
 
+@import '../../scripts/directives/charts/linechart/linechart';
+
 @import '../../scripts/directives/widgets/statustile/statusTile';
 @import '../../scripts/directives/widgets/spinner/spinner';
 @import '../../scripts/directives/widgets/tristatecheck/tristatecheck';
