adding the line chart basics and putting delete/clone hooks in

--- a/source/java/admin-webapp/src/scripts/volumes/view/viewVolume.html
+++ b/source/java/admin-webapp/src/scripts/volumes/view/viewVolume.html
@@ -62,7 +62,7 @@
                     <td>{{snapshot.expiration}}</td>
                     <td>
                         <span class="fui-exit icon" title="Clone to new volume" ng-click="clone( snapshot )"></span>
-                        <span class="fui-cross icon" title="Delete"></span>
+                        <span class="fui-cross icon" title="Delete" ng-click="deleteSnapshot( snapshot )"></span>
                     </td>
                 </tr>
             </tbody>
