--- a/source/java/admin-webapp/src/styles/sass/components/_menu.scss
+++ b/source/java/admin-webapp/src/styles/sass/components/_menu.scss
@@ -2,7 +2,7 @@ body.menu-active nav#nav { left: 0px; }
 body.menu-active nav#nav ul { left: 0px; opacity: 1; }
 
 div#wrap {
-  position: fixed;
+//  position: fixed;
   top: $header_height;
   left: 0;
   width: 100%;
