--- a/source/java/admin-webapp/src/styles/sass/main/_mainshell.scss
+++ b/source/java/admin-webapp/src/styles/sass/main/_mainshell.scss
@@ -27,6 +27,7 @@
     background-color: $sub_header_color;
     clear: both;
     position: relative;
+    @include display-flex();
 }
 
 .main-container {
@@ -94,7 +95,7 @@ nav#nav {
 }
 
 .nav-parent {
-    position: absolute;
+//    position: absolute;
     top: 0px;
     height: 100%;
     width: 38px;
