--- a/source/java/admin-webapp/src/styles/sass/main.scss
+++ b/source/java/admin-webapp/src/styles/sass/main.scss
@@ -39,6 +39,7 @@
 @import '../../scripts/directives/charts/linechart/linechart';
 
 @import '../../scripts/directives/widgets/statustile/statusTile';
+@import '../../scripts/directives/widgets/slidewindowstack/slidewindowstack';
 @import '../../scripts/directives/widgets/tooltip/tooltip';
 @import '../../scripts/directives/widgets/spinner/spinner';
 @import '../../scripts/directives/widgets/tristatecheck/tristatecheck';
