--- a/source/java/admin-webapp/src/styles/sass/volumes/_index.scss
+++ b/source/java/admin-webapp/src/styles/sass/volumes/_index.scss
@@ -1,6 +1,6 @@
 .header.volumes {
-  padding-left: 15px;
-  padding-right: 15px;
+//  padding-left: 15px;
+//  padding-right: 15px;
   color: $text_very_light_color;
 }
 
@@ -11,40 +11,41 @@
 
 .volumecontainer {
     width: 100%;
-    position: absolute;
+//    position: absolute;
     left: 0px;
     top: 0px;
 }
 
 .create-panel.volumes {
-    display: inline-block;
-    width: 100%;
-    @include transition(linear, 200ms);
-    padding: 2px;
-    padding-left: 20px;
-    margin-bottom: 12px;
-    position: absolute;
-    left: 100%;
-    top: 0px;
 
-    &.shown {
-        opacity: 1.0;
-        display: inline-block
-    }
-
-    &.hideit {
-        opacity: 0.0;
-        display: none;
-    }
-
-    .content {
-        display: inline-block;
-        border-bottom: 1px solid $gray_border;
-    }
-
-    .settings-panel {
-        width: 100%;
-    }
+//    display: inline-block;
+//    width: 100%;
+//    @include transition(linear, 200ms);
+//    padding: 2px;
+//    padding-left: 20px;
+//    margin-bottom: 12px;
+//    position: absolute;
+//    left: 100%;
+//    top: 0px;
+//
+//    &.shown {
+//        opacity: 1.0;
+//        display: inline-block
+//    }
+//
+//    &.hideit {
+//        opacity: 0.0;
+//        display: none;
+//    }
+//
+//    .content {
+//        display: inline-block;
+//        border-bottom: 1px solid $gray_border;
+//    }
+//
+//    .settings-panel {
+//        width: 100%;
+//    }
 }
 
 .volume-edit-container {
