Cosmetic fixes to deal with sliding menu and some pixel trash cleanup

--- a/source/java/admin-webapp/src/scripts/directives/angular-fui/fui-dropdown/_fui-dropdown.scss
+++ b/source/java/admin-webapp/src/scripts/directives/angular-fui/fui-dropdown/_fui-dropdown.scss
@@ -24,12 +24,12 @@
     display: inline-block;
 
     .caret {
-        margin-top: 8px;
+//        margin-top: 8px;
     }
 
     .skinny {
         .caret {
-            margin-top: 6px;
+//            margin-top: 6px;
         }
     }
 
