--- a/source/java/admin-webapp/src/styles/sass/components/_menu.scss
+++ b/source/java/admin-webapp/src/styles/sass/components/_menu.scss
@@ -3,7 +3,7 @@ body.menu-active nav#nav ul { left: 0px; opacity: 1; }
 
 div#wrap {
 //  position: fixed;
-  top: $header_height;
+//  top: $header_height;
   left: 0;
   width: 100%;
   height: 100%;
