--- a/source/java/admin-webapp/src/styles/sass/main/_mainshell.scss
+++ b/source/java/admin-webapp/src/styles/sass/main/_mainshell.scss
@@ -33,6 +33,8 @@
 .main-container {
     padding: 24px;
     padding-top: 8px;
+    position: absolute;
+    top: 0px;
 }
 
 nav#nav {
@@ -105,7 +107,7 @@ nav#nav {
     overflow: hidden;
 
     &:hover {
-        width: 115px;
+//        width: 115px;
     }
 
 }
