Internationalizing the rest of the app

--- a/source/java/admin-webapp/src/scripts/volumes/view/viewVolume.html
+++ b/source/java/admin-webapp/src/scripts/volumes/view/viewVolume.html
@@ -8,7 +8,7 @@
 
     <section class="form-section">
         <div>
-            <span class="light-print">Snapshot policies</span>
+            <span class="light-print" translate>volumes.l_snapshot_policies</span>
         </div>
 
         <section class="summary-form-section">
@@ -31,7 +31,7 @@
                 </div>
 
                 <div>
-                    <button class="btn btn-primary" ng-click="doneEditing()">Done</button>
+                    <button class="btn btn-primary" ng-click="doneEditing()" translate>common.l_done</button>
                 </div>
             </div>
         </section>
@@ -41,14 +41,14 @@
 
     <section class="form-section">
         <div>
-            <span class="light-print">Snapshots</span>
+            <span class="light-print" translate>volumes.l_snapshots</span>
         </div>
 
         <table class="default">
             <thead>
                 <tr>
-                    <th>Date</th>
-                    <th>Expiration</th>
+                    <th translate>common.th_date</th>
+                    <th translate>volumes.th_expiration</th>
                     <th></th>
                 </tr>
             </thead>
