changes to the styling of snapshot and unit test suite added

--- a/source/java/admin-webapp/src/scripts/directives/angular-fui/fui-dropdown/_fui-dropdown.scss
+++ b/source/java/admin-webapp/src/scripts/directives/angular-fui/fui-dropdown/_fui-dropdown.scss
@@ -26,10 +26,18 @@
     .caret {
 //        margin-top: 8px;
     }
+    
+    .table-caret {
+        margin-top: 8px;
+    }
 
     .skinny {
         .caret {
 //            margin-top: 6px;
+        }
+        
+        .table-caret {
+            margin-top: 6px;
         }
     }
 
