--- a/source/java/admin-webapp/src/styles/sass/components/_popups.scss
+++ b/source/java/admin-webapp/src/styles/sass/components/_popups.scss
@@ -1,12 +1,14 @@
 .modal-header {
-  border-bottom: 1px solid $text_very_light_color;
-  padding: 0px;
-  margin-bottom: 36px;
-  color: $text_very_light_color;
+    border-bottom: 1px solid $text_very_light_color;
+    padding: 0px;
+    padding-bottom: 10px;
+    margin-bottom: 36px;
+    font-size: 16px;
+    color: black;
 
-  a {
-    padding-top: 0.3em;
-  }
+    a {
+        padding-top: 0.3em;
+    }
 
 //  span {
 //    font-size: 1.2em;
