--- a/source/java/admin-webapp/src/styles/sass/main.scss
+++ b/source/java/admin-webapp/src/styles/sass/main.scss
@@ -43,6 +43,8 @@
 @import '../../scripts/directives/widgets/tooltip/tooltip';
 @import '../../scripts/directives/widgets/spinner/spinner';
 @import '../../scripts/directives/widgets/tristatecheck/tristatecheck';
+@import '../../scripts/directives/widgets/treegrid/treegrid';
+@import '../../scripts/directives/widgets/fds-radio/fds-radio';
 @import '../../scripts/directives/angular-fui/fui-checkbox/fui-checkbox';
 @import '../../scripts/directives/angular-fui/fui-dropdown/fui-dropdown';
 @import '../../scripts/directives/angular-fui/fui-slider/fui-slider';
