--- a/source/java/admin-webapp/src/styles/sass/fonts/icomoon/_icomoon.scss
+++ b/source/java/admin-webapp/src/styles/sass/fonts/icomoon/_icomoon.scss
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('/fonts/icomoon.eot?c9510o');
-	src:url('/fonts/icomoon.eot?#iefixc9510o') format('embedded-opentype'),
-		url('/fonts/icomoon.woff?c9510o') format('woff'),
-		url('/fonts/icomoon.ttf?c9510o') format('truetype'),
-		url('/fonts/icomoon.svg?c9510o#icomoon') format('svg');
+	src:url('/fonts/icomoon.eot?dj4ww2');
+	src:url('/fonts/icomoon.eot?#iefixdj4ww2') format('embedded-opentype'),
+		url('/fonts/icomoon.woff?dj4ww2') format('woff'),
+		url('/fonts/icomoon.ttf?dj4ww2') format('truetype'),
+		url('/fonts/icomoon.svg?dj4ww2#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -23,17 +23,8 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.icon-nodes:before {
-	content: "\e606";
-}
 .icon-system:before {
 	content: "\e600";
-}
-.icon-users:before {
-	content: "\e601";
-}
-.icon-volumes:before {
-	content: "\e602";
 }
 .icon-inbox:before {
 	content: "\e603";
@@ -41,6 +32,36 @@
 .icon-activity_pulse:before {
 	content: "\e604";
 }
+.icon-volumes:before {
+	content: "\e602";
+}
+.icon-users:before {
+	content: "\e601";
+}
+.icon-nodes:before {
+	content: "\e606";
+}
 .icon-admin:before {
 	content: "\e605";
+}
+.icon-pencil:before {
+	content: "\e607";
+}
+.icon-et:before {
+	content: "\e608";
+}
+.icon-tenant:before {
+	content: "\e609";
+}
+.icon-firebreak:before {
+	content: "\e60a";
+}
+.icon-cake:before {
+	content: "\e60b";
+}
+.icon-presets:before {
+	content: "\e60c";
+}
+.icon-clone:before {
+	content: "\e60d";
 }
