putting a browser into the clone selection instead of tree

--- a/source/java/admin-webapp/src/styles/sass/_variables.scss
+++ b/source/java/admin-webapp/src/styles/sass/_variables.scss
@@ -11,6 +11,9 @@ $text_link_color: #0079FF;
 $gray_border: #CCCCCC;
 $dark_border: #444444;
 
+$highlight_color: #2486F8;
+$highlight_text_color: white;
+
 $button_primary: #2486F8;
 $button_primary_hover: #59A6FF;
 $button_secondary: #878787;
@@ -20,6 +23,7 @@ $button_secondary_active: #bababa;
 $fds_dark_green: #2486F8;
 $fds_light_green: #9BC9FF;
 $fds_extra_light_green: #59A6FF;
+$fds_dark_gray: #999999;
 
 /* Alert colors */
 $green: #68BC1D;
