--- a/source/java/admin-webapp/src/scripts/directives/widgets/slidewindowstack/_slidewindowstack.scss
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/slidewindowstack/_slidewindowstack.scss
@@ -11,11 +11,14 @@
 }
 
 .slide-window-stack-slide {
-    position: absolute;
-    top: 0px;
     @include transition( linear, 200ms );
     width: 100%;
     height: 100%;
     padding-left: 4px;
     padding-right: 24px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
 }
