Fixed tooltip arrow, stats axis label function and scrolling for clone browser

--- a/source/java/admin-webapp/src/scripts/directives/widgets/macbrowser/_macbrowser.scss
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/macbrowser/_macbrowser.scss
@@ -13,6 +13,11 @@
         }
     }
     
+    .list-container {
+        height: 100%;
+        overflow: auto;
+    }
+    
     ul {
         padding: 2px;
     }
