adding the ability to have a confirm dialog before a snapshot is created

--- a/source/java/admin-webapp/src/scripts/directives/widgets/fds-modal/_fds-modal.scss
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/fds-modal/_fds-modal.scss
@@ -33,6 +33,10 @@
             width: 100%;
             @include display-flex();
             @include justify-content( center );
+            
+            button {
+                margin: 4px;
+            }
         }
     }
 }
