--- a/source/java/admin-webapp/src/scripts/directives/widgets/fds-radio/_fds-radio.scss
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/fds-radio/_fds-radio.scss
@@ -6,6 +6,11 @@
         display: none;
     }
     
+    .radio-icon {
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+    
     .selector {
         width: 16px;
         height: 16px;
