--- a/source/java/admin-webapp/src/scripts/directives/widgets/tristatecheck/_tristatecheck.scss
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/tristatecheck/_tristatecheck.scss
@@ -1,8 +1,21 @@
 .tristatecheck {
 
+    position: relative;
+    border: solid 1px gray;
+    width: 12px;
+    height: 12px;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 1em;
+    line-height: 9px;
+    
     @include no-select();
     color: $text_very_light_color;
-
+    
+    &.disabled {
+        border: 0px;
+    }
+    
     .checked {
         position: absolute;
         left: 0px;
