changing a few items that came up during code review dealing with CSS and internationalization

--- a/source/java/admin-webapp/src/scripts/directives/widgets/macbrowser/_macbrowser.scss
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/macbrowser/_macbrowser.scss
@@ -29,6 +29,14 @@ $macbrowser_background_color: rgb(234,234,234);
         }
     }
     
+    .section-container {
+        position: absolute;
+        top: 34px;
+        bottom: 34px;
+        right: 0px;
+        left: 0px;
+    }
+    
     .list-container {
         position: absolute;
         top: 26px;
