--- a/source/java/admin-webapp/src/scripts/directives/widgets/summarynumberdisplay/_summaryNumberDisplay.scss
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/summarynumberdisplay/_summaryNumberDisplay.scss
@@ -1,15 +1,45 @@
-.summary-number-display{
+.summary-number-display {
+    
+    .dots-parent {
+       
+        margin-top: auto;
+        margin-bottom: auto;
+        padding-right: 4px;
+        padding-top: 10px;
+        
+        .dot {
+            width: 8px;
+            height: 8px;
+            border: 1px solid $text_very_light_color;
+            border-radius: 4px;
+            margin-top: 2px;
+            margin-bottom: 2px;
+            cursor: pointer;
+            
+            &.filled {
+                background-color: $text_very_light_color;
+            }
+        }
+    
+    }
     
     .main-number {
         font-size: 34px;
         color: black;
-        height: 44px;
     }
 
     .decimals {
         color: black;
         font-size: 18px;
-        height: 25px;
-        margin-top: 19px;
+        margin-top: 20px;
+    }
+    
+    .tile-description {
+        color: $text_very_light_color;
+        padding-top: 2px;
+        padding-left: 4px;
+        overflow: scroll;
+        line-height: 1.1;
+        height: 32px;
     }
 }
