--- a/source/java/admin-webapp/src/styles/sass/main.scss
+++ b/source/java/admin-webapp/src/styles/sass/main.scss
@@ -38,6 +38,7 @@
 
 @import '../../scripts/directives/charts/linechart/linechart';
 
+@import '../../scripts/directives/widgets/summarynumberdisplay/summaryNumberDisplay';
 @import '../../scripts/directives/widgets/statustile/statusTile';
 @import '../../scripts/directives/widgets/slidewindowstack/slidewindowstack';
 @import '../../scripts/directives/widgets/tooltip/tooltip';
