Re-skinning the sla values and fixing tests, also finishing the snapshot editing case

--- a/source/java/admin-webapp/src/styles/sass/_base.scss
+++ b/source/java/admin-webapp/src/styles/sass/_base.scss
@@ -48,6 +48,10 @@ li:active, li:focus, a:active, a:focus {
   font-weight: lighter;
 }
 
+.title-case {
+    color: black;
+}
+
 .alert {
   text-align: center;
   border-radius: 0px;
