--- a/source/java/admin-webapp/src/styles/sass/_variables.scss
+++ b/source/java/admin-webapp/src/styles/sass/_variables.scss
@@ -3,7 +3,7 @@ $base_bg_color: #FFFFFF;
 $header_color: #3A424F;
 $sub_header_color: #EBEBEB;
 $widget_color: #4C4C4C;
-$default_text_color: #3A424F;
+$default_text_color: black;
 $text_light_color: #74757B;
 $text_very_light_color: #A0A0A0;
 $text_link_color: #0079FF;
