--- a/source/java/admin-webapp/src/styles/sass/main.scss
+++ b/source/java/admin-webapp/src/styles/sass/main.scss
@@ -52,6 +52,7 @@
 @import '../../scripts/directives/angular-fui/fui-slider/fui-slider';
 @import '../../scripts/directives/angular-fui/fui-input/fui-input';
 @import '../../scripts/directives/widgets/navitem/navitem';
+@import '../../scripts/directives/widgets/slider/slider';
 @import '../../scripts/directives/widgets/priorityslider/priority_slider';
 @import '../../scripts/directives/widgets/variableslider/variable_slider';
 @import '../../scripts/directives/widgets/linkbuttons/linkbuttons';
