making the volume drill-in page live.  Required a lot of wor on the line chart

--- a/source/java/admin-webapp/src/styles/sass/main.scss
+++ b/source/java/admin-webapp/src/styles/sass/main.scss
@@ -33,6 +33,7 @@
 @import 'admin/index';
 @import 'volumes/index';
 @import 'volumes/new';
+@import 'volumes/view';
 @import 'status/index';
 @import 'account/index';
 
