--- a/source/java/admin-webapp/src/styles/sass/components/_page_defaults.scss
+++ b/source/java/admin-webapp/src/styles/sass/components/_page_defaults.scss
@@ -1,10 +1,16 @@
-$page-padding: 15px;
+$page-padding: 0px;
 
 .header {
     color: $text_very_light_color;
     font-weight: normal;
     font-size: 1.1em;
     //  margin: 0 0 7px 10px;
+}
+
+.sub-header {
+    color: $text_very_light_color;
+    font-weight: normal;
+    font-size: 1em;
 }
 
 .header.top-label {
