--- a/source/java/admin-webapp/src/styles/sass/main.scss
+++ b/source/java/admin-webapp/src/styles/sass/main.scss
@@ -48,6 +48,7 @@
 @import '../../scripts/directives/widgets/treegrid/treegrid';
 @import '../../scripts/directives/widgets/fds-modal/fds-modal';
 @import '../../scripts/directives/widgets/macbrowser/macbrowser';
+@import '../../scripts/directives/widgets/pager/pager';
 @import '../../scripts/directives/widgets/fds-radio/fds-radio';
 @import '../../scripts/directives/angular-fui/fui-checkbox/fui-checkbox';
 @import '../../scripts/directives/angular-fui/fui-dropdown/fui-dropdown';
