--- a/source/java/admin-webapp/src/scripts/volumes/view/viewVolume.html
+++ b/source/java/admin-webapp/src/scripts/volumes/view/viewVolume.html
@@ -49,7 +49,7 @@
         
         <div class="flex" style="width: 100%;height: 200px;">
             <div style="flex-grow: 5;">
-                <status-tile tile-title="{{ 'status.l_performance' | translate }}" calculated-data="items">
+                <status-tile tile-title="{{ 'status.l_performance' | translate }}" calculated-data="performanceItems">
                     <line-chart data="performanceStats" colors="performanceColors" opacities="opacities" suffix="IOPs" axis-color="#A0A0A0" background-color="#f7f7f7" domain-labels="performanceTimeChoice.labels" line-colors="performanceLines"></line-chart>
                 </status-tile>
             </div>
