--- a/source/java/admin-webapp/src/scripts/volumes/view/viewVolume.html
+++ b/source/java/admin-webapp/src/scripts/volumes/view/viewVolume.html
@@ -20,7 +20,7 @@
         <div class="flex" style="width: 100%;height: 200px;">
         
             <div style="flex-grow: 5;">
-                <status-tile tile-title="{{ 'status.l_capacity' | translate }}" calculated-data="items">
+                <status-tile tile-title="{{ 'status.l_capacity' | translate }}" calculated-data="capacityItems">
                     <line-chart data="capacityStats" colors="capacityColors" opacities="opacities" y-axis-label-function="capacityLabelFx" axis-color="#A0A0A0" line-stipples="capacityLineStipples" line-colors="capacityLineColors" tooltip="setCapacityTooltipText" background-color="#f7f7f7" domain-labels="capacityTimeChoice.labels"></line-chart>
                 </status-tile>
             </div>
