Add task to wipe an FDS cluster disk set - Add task to wipe disks NOTE: Applies to all nodes, must restrict nodes   when running ansible - Update platform.conf in ansible templates - even though they aren't   used

--- a/ansible/templates/platform.conf.j2
+++ b/ansible/templates/platform.conf.j2
@@ -274,6 +274,7 @@ fds: {
 	testing: {
             /* Toggle old or new processing path */
 	    toggleNewPath = true
+			toggleStandAlone = false
 	    /* Forces all AM dispatcher APIs to immediately return success */
 	    uturn_dispatcher_all = false
 	    /* Test mode to bypass local catalog cache */
