--- a/source/config/etc/platform.conf.j2
+++ b/source/config/etc/platform.conf.j2
@@ -27,7 +27,7 @@ fds: {
         logfile = "pltform"
 
         /* Log severity */
-        log_severity = "trace"
+        log_severity = "{{ pm_log_severity }}"
 
         /* Control path port */
         platform_port = 7000
@@ -76,8 +76,8 @@ fds: {
             default_outstanding_io = 20
         }
 
-        catalog_write_buffer_size = 52428800
-        catalog_cache_size = 16777216
+        catalog_write_buffer_size = "{{ dm_leveldb_write_buffer_size }}"
+        catalog_cache_size =  "{{ dm_leveldb_cache_size }}"
         catalog_log_max_files = 5
 
         /* process id */
@@ -90,7 +90,7 @@ fds: {
         logfile = "dm"
 
         /* Log severity */
-        log_severity = "trace"
+        log_severity = "{{ dm_log_severity }}"
 
         cache: {
            /* Default max entries in a volume's DM catalog cache */
@@ -156,12 +156,12 @@ fds: {
         logfile="sm"
 
         /* Log severity */
-        log_severity = "trace"
+        log_severity = "{{ sm_log_severity }}"
 
         /* verify data on datapath */
-        data_verify = true
+        data_verify = "{{ sm_data_verify }}"
         /* verify data in background */
-        data_verify_background = true
+        data_verify_background = "{{ sm_data_verify_background }}"
 
         objectstore: {
             /* Size of the hashed task synchronizer */
@@ -169,7 +169,7 @@ fds: {
         }
         cache: {
             /* Default max number of data cache entries */
-            default_data_entries = 0
+            default_data_entries =  "{{  sm_cache_entries }}"
             /* Default max number of metadata entries */
             default_meta_entries = 0;
         }
@@ -244,7 +244,7 @@ fds: {
         perf: {
             enable=true
         }
-        log_severity = "trace"
+        log_severity = "{{ am_log_severity }}"
         logfile      = "am"
         om_ip        = "{{ om_ip }}"
         om_port      = 8904
@@ -273,7 +273,7 @@ fds: {
         }
         cache: {
             /* Default max entries in a volume's AM cache */
-            default_max_entries = 200
+            default_max_entries =  "{{ am_cache_entries }}"
             /* Default max staged entries in a volume's tx descriptor */
             tx_max_staged_entries = 10
         }
@@ -284,7 +284,7 @@ fds: {
             toggleStandAlone = false
 
             /* Toggle to disable stats collection for metadata streaming */
-            toggleDisableStreamingStats = false
+            toggleDisableStreamingStats =  "{{ am_testing_toggle_disable_streaming_stats }}" 
 
             /* NBD module driver */
             nbd_vol_module = "sm"
@@ -331,7 +331,7 @@ fds: {
     {
         id="om"
         prefix=""
-        log_severity = "trace"
+        log_severity = "{{ om_log_severity }}"
         logfile="om"
         config_port=8903
         control_port=8904
@@ -360,7 +360,7 @@ fds: {
         id = "checker"
         path = "/home/bao_pham/temp/skinet2"
         logfile = "checker"
-        log_severity = "trace"
+        log_severity = "{{ checker_log_severity }}"
 
         /* Control path port */
         control_port = 6991
