--- a/source/java/admin-webapp/src/scripts/volumes/view/viewVolume.html
+++ b/source/java/admin-webapp/src/scripts/volumes/view/viewVolume.html
@@ -11,7 +11,7 @@
             <span class="header" translate>volumes.l_volume_name</span>
         </div>
         
-        <div class="main-value">{{thisVolume.name}}</div>
+        <div class="main-value volume-name">{{thisVolume.name}}</div>
     </section>
     
     <!-- The capacity charting -->
@@ -21,7 +21,7 @@
         
             <div style="flex-grow: 5;">
                 <status-tile tile-title="{{ 'status.l_capacity' | translate }}" calculated-data="capacityItems">
-                    <line-chart data="capacityStats" colors="capacityColors" opacities="opacities" y-axis-label-function="capacityLabelFx" axis-color="#A0A0A0" line-stipples="capacityLineStipples" line-colors="capacityLineColors" tooltip="setCapacityTooltipText" background-color="#f7f7f7" domain-labels="capacityTimeChoice.labels"></line-chart>
+                    <line-chart data="capacityStats" colors="capacityColors" y-axis-label-function="capacityLabelFx" axis-color="#A0A0A0" line-stipples="capacityLineStipples" line-colors="capacityLineColors" tooltip="setCapacityTooltipText" background-color="#f7f7f7" domain-labels="capacityTimeChoice.labels"></line-chart>
                 </status-tile>
             </div>
             
@@ -32,11 +32,11 @@
                 
                 <div class="bottom-stack">
                     <div class="flex">
-                        <div class="legend-box dotted" ng-style="{ 'border-color': capacityLineColors[1], 'background-color': capacityColors[1] }"></div>
+                        <div class="legend-box dotted" ng-style="{ 'border-color': capacityLineColors[0], 'background-color': capacityColors[0] }"></div>
                         <div class="legend-data">{{ physicalLabel }}</div>
                     </div>
                     <div class="flex">
-                        <div class="legend-box" ng-style="{ 'border-color': capacityLineColors[0], 'background-color': capacityColors[0] }"></div>
+                        <div class="legend-box" ng-style="{ 'border-color': capacityLineColors[1], 'background-color': capacityColors[1] }"></div>
                         <div class="legend-data">{{ dedupLabel }}</div>
                     </div>
                 </div>
@@ -50,7 +50,7 @@
         <div class="flex" style="width: 100%;height: 200px;">
             <div style="flex-grow: 5;">
                 <status-tile tile-title="{{ 'status.l_performance' | translate }}" calculated-data="performanceItems">
-                    <line-chart data="performanceStats" colors="performanceColors" opacities="opacities" suffix="IOPs" axis-color="#A0A0A0" background-color="#f7f7f7" domain-labels="performanceTimeChoice.labels" line-colors="performanceLines"></line-chart>
+                    <line-chart data="performanceStats" colors="performanceColors" suffix="IOPs" axis-color="#A0A0A0" background-color="#f7f7f7" domain-labels="performanceTimeChoice.labels" line-colors="performanceLine"></line-chart>
                 </status-tile>
             </div>
             <div class="gutter" style="position: relative;">
@@ -68,88 +68,21 @@
     </section>
     
     <section class="block-section">
-        <div class="section-header">
-            <span class="header" translate>volumes.l_settings</span>
-        </div>
-        
-        <div class="section-header">
-            <span class="sub-header" translate>volumes.view.l_data_connector_settings</span>
-        </div>
-        
-        <div class="flex">
-            <div style="position: relative;width: 100%;">
-                <table class="default">
-                    <thead>
-                        <tr>
-                            <th class="no-top-padding"></th>
-                            <th class="no-top-padding"></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>
-                                <div class="data-connector-display">{{thisVolume.data_connector.type}}</div>
-                            </td>
-                            <td>
-                                <div ng-show="thisVolume.data_connector.attributes.size">
-
-                                    <div class="flex">
-                                        <span style="margin-right: 4px;">{{thisVolume.data_connector.attributes.size}}</span>
-                                        <span>{{thisVolume.data_connector.attributes.unit}}</span>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="gutter"></div>
-        </div>
+        <connector-panel ng-model="dataConnector" editable="false"></connector-panel>
     </section>
     
-    <div ng-include="'scripts/volumes/view/snapshotPolicy.html'"></div>
+    <section class="block-section">
+        <snapshot-policy-panel ng-model="snapshotPolicies"></snapshot-policy-panel>
+    </section>
     
     <section class="block-section">
-        <div class="section-header">
-            <span class="header" translate>volumes.view.l_performance_settings</span>
-        </div>
-        
+        <qos-panel ng-model="qos"></qos-panel>
+    </section>
+    
+    <section>
         <div class="flex">
-            <div style="position: relative;width: 100%;">
-                <table class="default" style="width: 100%;">
-                    <thead>
-                        <tr>
-                            <th class="no-top-padding" colspan="2" translate>
-                                volumes.l_settings
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody class="volume-display-only">
-                        <tr>
-                            <td translate>volumes.th_priority</td>
-                            <td class="pad">
-                                <span class="volume-priority-display-only">{{thisVolume.priority}}</span>
-                                <span translate ng-show="priority === 1">volumes.l_l_highest</span>
-                                <span translate ng-show="priority === 10">volumes.l_l_lowest</span>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td translate>volumes.th_iops_guarantee</td>
-                            <td class="pad">
-                                <span class="volume-sla-display">{{thisVolume.sla}}%</span>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td translate>volumes.th_iops_limit</td>
-                            <td class="pad">
-                                <span class="volume-limit-display" ng-show="thisVolume.limit > 0">{{thisVolume.limit}} {{ 'volumes.l_iops' | translate }}</span>
-                                <span class="volume-limit-display-none" ng-show="thisVolume.limit === 0" translate>common.l_none</span>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="gutter"></div>
+            <span class="icon-delete delete delete-volume vertical-middle" ng-click="deleteVolume()"></span>
+            <a class="delete" ng-click="deleteVolume()" translate>volumes.l_delete_volume</a>
         </div>
     </section>
     
