completing work to switch a user from one tenant to another

--- a/source/java/admin-webapp/src/scripts/directives/angular-fui/fui-input/_fui-input.scss
+++ b/source/java/admin-webapp/src/scripts/directives/angular-fui/fui-input/_fui-input.scss
@@ -19,6 +19,10 @@
     input:focus {
         outline: 0;
     }
+    
+    input:disabled {
+        background-color: transparent;
+    }
 
     .input-icon {
         position: absolute;
