WIN-1277 Adding port multi-plexing for multiple AM instances for multi-AM setup.

--- a/source/config/etc/platform.conf.j2
+++ b/source/config/etc/platform.conf.j2
@@ -249,6 +249,9 @@ fds: {
         om_ip        = "{{ om_ip }}"
         om_port      = 8904
 
+        /* ID for local AM instance */
+        instanceId = 0
+
         /* TODO(Rao): Get this from platform */
         om_config_port = 8903
         enable_graphite = {{ metrics_enabled }}
